RESOLVED FIXED300214
Unreviewed visionOS build fix after 301038@main
https://bugs.webkit.org/show_bug.cgi?id=300214
Summary Unreviewed visionOS build fix after 301038@main
Chris Dumez
Reported 2025-10-05 21:59:00 PDT
Unreviewed visionOS build fix after 301038@main.
Attachments
Chris Dumez
Comment 1 2025-10-05 22:00:18 PDT
EWS
Comment 2 2025-10-05 22:02:42 PDT
Committed 301040@main (b452748cb030): <https://commits.webkit.org/301040@main> Reviewed commits have been landed. Closing PR #51848 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-05 22:04:27 PDT
Note You need to log in before you can comment on or make changes to this bug.