Unreviewed visionOS build fix after 301038@main https://bugs.webkit.org/show_bug.cgi?id=300214

* Source/WebCore/Modules/webxr/XRWebGLSubImage.cpp:
* Source/WebCore/Modules/webxr/XRWebGLSubImage.h:

Canonical link: https://commits.webkit.org/301040@main